--- a/README.adoc
+++ b/README.adoc
@@ -24,15 +24,41 @@ pixi global install meso-forge-tooling -c https://prefix.dev/meso-forge
 
 == Usage
 
+=== Using the meso-forge command
+
+The `meso-forge.nu` script provides a unified interface to all build, test, and publishing operations:
+
+[source,bash]
+----
+# Run through pixi (recommended)
+pixi run meso-forge help
+pixi run meso-forge build <package-name>
+pixi run meso-forge build-all
+pixi run meso-forge test-package <package-name>
+pixi run meso-forge publish-local
+
+# Direct execution (requires nushell in PATH)
+./meso-forge-tooling/scripts/meso-forge.nu help
+./meso-forge-tooling/scripts/meso-forge.nu build <package-name>
+----
+
+=== Common workflows
+
 [source,bash]
 ----
 # Configure MinIO client for conda package hosting
 pixi run init-minio
 
-# In a package branch directory
-meso-forge build-all
-meso-forge publish
-meso-forge test
+# Package development workflow
+pixi run meso-forge init-package _skeleton_python my-tool
+pixi run meso-forge build my-tool
+pixi run meso-forge test-package my-tool
+pixi run meso-forge publish-local
+
+# Bulk operations
+pixi run meso-forge build-all
+pixi run meso-forge lint
+pixi run meso-forge test
 ----
 
 == Creating New Package Branches
