--- a/meso-forge-tooling/docs/nushell-script-usage.adoc
+++ b/meso-forge-tooling/docs/nushell-script-usage.adoc
@@ -1,10 +1,10 @@
 = Nushell Scripts Usage Documentation
 
-This document provides a comprehensive overview of where and how the nushell scripts in the `.scripts` directory are used within the meso-forge project.
+This document provides a comprehensive overview of where and how the nushell scripts in the `scripts` directory are used within the meso-forge project.
 
 == Overview
 
-The nushell scripts in `.scripts/` provide the core functionality for building, testing, publishing, and managing conda packages in the meso-forge project. They are integrated through multiple layers:
+The nushell scripts in `scripts/` provide the core functionality for building, testing, publishing, and managing conda packages in the meso-forge project. They are integrated through multiple layers:
 
 . *Pixi Tasks* - Primary integration point via `pixi.toml`
 . *GitHub Actions* - CI/CD workflows
@@ -24,7 +24,7 @@ The scripts are primarily invoked through pixi tasks defined in `pixi.toml`. The
 |Task |Script |Purpose
 
 |`pixi run build`
-|`.scripts/build.nu`
+|`scripts/build.nu`
 |Build individual packages
 
 |`pixi run build-each`
@@ -56,15 +56,15 @@ pixi run build-each linux-64
 |Task |Script |Purpose
 
 |`pixi run check-package`
-|`.scripts/check_package_exists.nu`
+|`scripts/check_package_exists.nu`
 |Check if package exists in repositories
 
 |`pixi run package-status`
-|`.scripts/build.nu` (package-status function)
+|`scripts/build.nu` (package-status function)
 |Show package status across repositories
 
 |`pixi run clean`
-|`.scripts/manifest_utils.nu`
+|`scripts/manifest_utils.nu`
 |Remove specific package files
 |===
 
@@ -88,15 +88,15 @@ pixi run clean numpy linux-64
 |Task |Script |Purpose
 
 |`pixi run test`
-|`.scripts/test_package.nu`
+|`scripts/test_package.nu`
 |Test individual packages
 
 |`pixi run test-each`
-|`.scripts/test_package.nu` (test-each function)
+|`scripts/test_package.nu` (test-each function)
 |Test all packages
 
 |`pixi run test-status`
-|`.scripts/test_package.nu` (test-status function)
+|`scripts/test_package.nu` (test-status function)
 |Show testing status
 |===
 
@@ -120,19 +120,19 @@ pixi run test-status
 |Task |Script |Purpose
 
 |`pixi run publish-pd`
-|`.scripts/package_publish.nu`
+|`scripts/package_publish.nu`
 |Publish to prefix.dev
 
 |`pixi run publish-s3`
-|`.scripts/package_publish.nu`
+|`scripts/package_publish.nu`
 |Publish to S3
 
 |`pixi run publish-each-pd`
-|`.scripts/package_publish.nu` (publish-each function)
+|`scripts/package_publish.nu` (publish-each function)
 |Publish all packages to prefix.dev
 
 |`pixi run publish-each-s3`
-|`.scripts/package_publish.nu` (publish-each function)
+|`scripts/package_publish.nu` (publish-each function)
 |Publish all packages to S3
 |===
 
@@ -159,11 +159,11 @@ pixi run publish-pd-dry numpy linux-64
 |Task |Script |Purpose
 
 |`pixi run retract-pd`
-|`.scripts/package_retract.nu`
+|`scripts/package_retract.nu`
 |Retract from prefix.dev
 
 |`pixi run retract-s3`
-|`.scripts/package_retract.nu`
+|`scripts/package_retract.nu`
 |Retract from S3
 |===
 
@@ -187,15 +187,15 @@ pixi run retract-pd-dry mypackage --channel meso-forge --versions "1.0.0"
 |Task |Script |Purpose
 
 |`pixi run list-manifest`
-|`.scripts/manifest_utils.nu` (manifest-summary function)
+|`scripts/manifest_utils.nu` (manifest-summary function)
 |Show manifest summary
 
 |`pixi run clean-manifest`
-|`.scripts/manifest_utils.nu` (manifest-cleanup function)
+|`scripts/manifest_utils.nu` (manifest-cleanup function)
 |Clean up manifest entries
 
 |`pixi run publish-status`
-|`.scripts/package_publish.nu` (publish-status function)
+|`scripts/package_publish.nu` (publish-status function)
 |Show publish status
 |===
 
@@ -222,7 +222,7 @@ The scripts are used in CI/CD workflows for automated building and publishing.
 
 *Script Usage:*
 
-* Uses `pixi run build-each` which internally calls multiple instances of `.scripts/build.nu`
+* Uses `pixi run build-each` which internally calls multiple instances of `scripts/build.nu`
 * Builds packages for multiple platforms (currently linux-64)
 * Uploads artifacts for the publish workflow
 
@@ -244,13 +244,13 @@ The scripts are used in CI/CD workflows for automated building and publishing.
 
 *Script Usage:*
 
-* Uses `pixi run publish-each-pd` which calls `.scripts/package_publish.nu`
+* Uses `pixi run publish-each-pd` which calls `scripts/package_publish.nu`
 * Publishes built packages to prefix.dev
 * Downloads artifacts from build workflow
 
 === 3. Root-Level Script Wrappers
 
-There are convenience wrapper scripts in the project root that import from `.scripts/`:
+There are convenience wrapper scripts in the project root that import from `scripts/`:
 
 ==== `package_publish.nu`
 [source,nu]
@@ -258,8 +258,8 @@ There are convenience wrapper scripts in the project root that import from `.scr
 use manifest_utils.nu *
 ----
 
-* Wrapper around `.scripts/package_publish.nu`
-* Uses relative imports to `.scripts/manifest_utils.nu`
+* Wrapper around `scripts/package_publish.nu`
+* Uses relative imports to `scripts/manifest_utils.nu`
 
 ==== `package_retract.nu`
 [source,nu]
@@ -267,10 +267,10 @@ use manifest_utils.nu *
 use manifest_utils.nu *
 ----
 
-* Wrapper around `.scripts/package_retract.nu`
-* Uses relative imports to `.scripts/manifest_utils.nu`
+* Wrapper around `scripts/package_retract.nu`
+* Uses relative imports to `scripts/manifest_utils.nu`
 
-NOTE: These wrappers appear to have import path issues since `manifest_utils.nu` is in `.scripts/`, not the root directory.
+NOTE: These wrappers appear to have import path issues since `manifest_utils.nu` is in `scripts/`, not the root directory.
 
 === 4. Direct Command Line Usage
 
@@ -279,9 +279,9 @@ The scripts can be run directly for development and debugging:
 [source,bash]
 ----
 # Direct script execution
-nu .scripts/build.nu mypackage --target-platform linux-64
-nu .scripts/check_package_exists.nu numpy --platform linux-64 --check_all
-nu .scripts/test_package.nu mypackage --target-platform linux-64
+nu scripts/build.nu mypackage --target-platform linux-64
+nu scripts/check_package_exists.nu numpy --platform linux-64 --check_all
+nu scripts/test_package.nu mypackage --target-platform linux-64
 ----
 
 == Script Dependencies and Data Flow
@@ -444,7 +444,7 @@ pixi run publish-status
 
 . *Import Errors in Root Scripts*
    * Root-level `package_publish.nu` and `package_retract.nu` have incorrect import paths
-   * Use `.scripts/package_publish.nu` directly or fix import paths
+   * Use `scripts/package_publish.nu` directly or fix import paths
 
 . *Authentication Issues*
    * Recommended: Use `pixi auth login` for keyring storage
