added tooling for updating the pixi.toml for a package project

--- a/meso-forge-tooling/docs/nushell-wrapper.adoc
+++ b/meso-forge-tooling/docs/nushell-wrapper.adoc
@@ -64,7 +64,7 @@ match $command {
         # Handle build commands with validation
     }
     "publish-pd" => {
-        run_nu_script $scripts_dir "publish.nu" ["--mode" "pd" ...$args]
+        run_nu_script $scripts_dir "package_publish.nu" ["--mode" "pd" ...$args]
     }
     # ... other commands
 }
