--- a/meso-forge-tooling/docs/pixi-task-management.adoc
+++ b/meso-forge-tooling/docs/pixi-task-management.adoc
@@ -18,10 +18,6 @@ The pixi task management system provides a standardized way to integrate meso-fo
 
 A unified script that combines both analysis and update functionality with an easy-to-use command interface. This is the main script for managing meso-forge tasks and replaces the need for separate analysis scripts.
 
-=== `update_pixi_tasks.nu`
-
-Updates a `pixi.toml` file with the latest meso-forge-tooling task definitions. Tasks that already exist will be replaced with the current standard configuration, and missing tasks will be added.
-
 === `pixi_tasks_mod.nu`
 
 A shared module containing common functions, task definitions, and utilities used by all the pixi task management scripts. This eliminates code duplication and ensures consistency across scripts.
@@ -110,27 +106,28 @@ Example output:
   - Run update command to refresh outdated task configurations
 ----
 
-=== Updating Tasks (Direct Script)
+=== Updating Tasks
 
-To update your `pixi.toml` with the latest meso-forge task definitions:
+To update your `pixi.toml` with the latest meso-forge task definitions using the unified script:
 
 [source,bash]
 ----
-nu meso-forge-tooling/scripts/update_pixi_tasks.nu
+nu meso-forge-tooling/scripts/pixi_tasks_manage.nu update
 ----
 
-Options:
-
-* `--pixi-file <path>`: Specify a different pixi.toml file (default: "pixi.toml")
-* `--dry-run`: Show what changes would be made without actually modifying the file
-* `--verbose`: Enable detailed logging
-
-The script will:
+The update process will:
 
 1. Create a timestamped backup of your original file
 2. Add any missing meso-forge tasks
 3. Update any existing meso-forge tasks with the current standard configuration
 4. Preserve all non-meso-forge tasks and other sections of the file
+
+Options for the update command:
+
+* `--pixi-file <path>`: Specify a different pixi.toml file (default: "pixi.toml")
+* `--dry-run`: Show what changes would be made without actually modifying the file
+* `--verbose`: Enable detailed logging
+* `--force`: Skip confirmation prompt
 
 === Dry Run Example
 
@@ -138,7 +135,7 @@ To see what changes would be made without modifying your file:
 
 [source,bash]
 ----
-nu meso-forge-tooling/scripts/update_pixi_tasks.nu --dry-run
+nu meso-forge-tooling/scripts/pixi_tasks_manage.nu update --dry-run
 ----
 
 == Meso-forge Tasks Managed
@@ -224,12 +221,7 @@ RECTANGLE "pixi_tasks_manage.nu" as manage {
   - show_help()
 }
 
-RECTANGLE "update_pixi_tasks.nu" as update {
-  - main()
-}
-
 manage --> mod : imports
-update --> mod : imports
 @enduml
 ----
 
@@ -304,8 +296,8 @@ nu meso-forge-tooling/scripts/pixi_tasks_manage.nu analyze --verbose
 # Verbose update
 nu meso-forge-tooling/scripts/pixi_tasks_manage.nu update --verbose
 
-# Verbose with legacy script
-nu meso-forge-tooling/scripts/update_pixi_tasks.nu --verbose
+# Verbose update
+nu meso-forge-tooling/scripts/pixi_tasks_manage.nu update --verbose
 ----
 
 This will show:
@@ -384,31 +376,13 @@ Shows outdated: `build-pkg`, `publish-s3`
 |Shows "All meso-forge tasks are up to date! 🎉"
 |===
 
-=== Alternative Workflow (Using Update Script Directly)
-
-[source,bash]
-----
-# 1. Check current state
-nu meso-forge-tooling/scripts/pixi_tasks_manage.nu analyze
-
-# 2. See what would change
-nu meso-forge-tooling/scripts/update_pixi_tasks.nu --dry-run
-
-# 3. Apply updates
-nu meso-forge-tooling/scripts/update_pixi_tasks.nu
-
-# 4. Verify changes
-nu meso-forge-tooling/scripts/pixi_tasks_manage.nu analyze
-----
-
 === Working with Different Files
 
 [source,bash]
 ----
-# Using unified script
+# Analyze different pixi.toml file
 nu meso-forge-tooling/scripts/pixi_tasks_manage.nu analyze --pixi-file ../other-project/pixi.toml
-nu meso-forge-tooling/scripts/pixi_tasks_manage.nu update --pixi-file ../other-project/pixi.toml
 
-# Using update script directly
-nu meso-forge-tooling/scripts/update_pixi_tasks.nu --pixi-file ../other-project/pixi.toml
+# Update different pixi.toml file
+nu meso-forge-tooling/scripts/pixi_tasks_manage.nu update --pixi-file ../other-project/pixi.toml
 ----
